--- a/Barbara/BE1_Anissin.css
+++ b/Barbara/BE1_Anissin.css
@@ -30,17 +30,20 @@
 #slack:hover {
 	border-color: silver;
 	border-width: 3px;
-	color: silver;
+	color: white;
+	text-shadow: 0px 0px 4px black;
 }
 #stackoverflow {
 	text-decoration: none;
-	transition: border 2s, text-decoration 3s;
+	transition: border 2s, text-decoration 3s, text-shadow 4s;
 }
 #stackoverflow:hover {
 	border-color: lime;
 	text-decoration: underline;
+	text-shadow: 2px 2px 10px black;
 }
 .w3schools {
+	width: 20px;
 }
 .w3schools:hover {
 	-webkit-transform: rotate(-360deg);
