--- a/Barbara/IE2_Flexbox.css
+++ b/Barbara/IE2_Flexbox.css
@@ -52,7 +52,7 @@ p {
 }
 .column1 {
 	margin-left: 2px;
-	width: 33%;
+	width: 35%;
 }
 .column2 {
 	width: 22%;
@@ -79,5 +79,8 @@ footer {
 	padding-left: 15px;
 }
 .ee1 {
-	margin-left: 5px;
+	padding-left: 10px;
+}
+.ee2 {
+	margin-left: -10px;
 }
